trunk/Archive2/6f/ba53bf84aff6b6/output
main.cpp: In function 'int main(int, char**)':
main.cpp:21:38: error: 'num_x_intervals' was not declared in this scope
   double delta_x = (max_x - min_x) / num_x_intervals;
                                      ^
main.cpp:25:53: error: expected primary-expression before ')' token
   for (int ix = 0; ix != num_x_intervals; ++ix, x +=) {
                                                     ^
main.cpp:27:25: error: expected ';' before '!' token
     for (int it = 0; it !+ num_t_intervals; ++it) {
                         ^
main.cpp:27:28: error: 'num_t_intervals' was not declared in this scope
     for (int it = 0; it !+ num_t_intervals; ++it) {
                            ^
main.cpp:27:43: error: expected ')' before ';' token
     for (int it = 0; it !+ num_t_intervals; ++it) {
                                           ^
main.cpp:27:47: error: 'it' was not declared in this scope
     for (int it = 0; it !+ num_t_intervals; ++it) {
                                               ^
main.cpp:15:7: warning: unused variable 'num_x_points' [-Wunused-variable]
   int num_x_points = atoi(argv[3]);
       ^
main.cpp:18:7: warning: unused variable 'num_t_points' [-Wunused-variable]
   int num_t_points = atoi(argv[6]);
       ^
main.cpp:19:10: warning: unused variable 'c' [-Wunused-variable]
   double c            = atof(argv[7]);
          ^
main.cpp:21:10: warning: unused variable 'delta_x' [-Wunused-variable]
   double delta_x = (max_x - min_x) / num_x_intervals;
          ^
